# Server-Client

./: README  README.md
Client/: CMakeLists.txt  makefile
Client/include/: ConnectToServer.h  ConnectToUser.h  connectionHandler.h
Client/src/: Client.cpp  ConnectToServer.cpp  ConnectToUser.cpp  connectionHandler.cpp
Server/src/main/java/bgu/spl/net/api/: ClientMessage.java  DataBase.java  MessageEncoderDecoderImpl.java  ServerMessage.java  User.java
Server/src/main/java/bgu/spl/net/api/bidi/: BidiMessagingProtocolImpl.java  ConnectionsImpl.java
Server/src/main/java/bgu/spl/net/impl/: ReactorMain.java  TPCMain.java
Server/src/main/java/bgu/spl/net/srv/: BaseServer.java  BaseServerImpl.java  BlockingConnectionHandler.java  ConnectionHandler.java  NonBlockingConnectionHandler.java  Reactor.java  Server.java
